[package]
name = "mini-math"
version = "0.2.4"
authors = ["Tristam MacDonald <swiftcoder@gmail.com>"]
license = "Apache-2.0"
description = "Lightweight math routines for 3D graphics"
edition = "2021"

homepage = "https://github.com/swiftcoder/mini-math-rs"
repository = "https://github.com/swiftcoder/mini-math-rs"
documentation = "https://docs.rs/mini-math"
readme = "README.md"

[dependencies]
